@@ -28,6 +28,7 @@ gocept.country = 0.6.4
 gocept.pagelet = 0.3
 gocept.reference = 0.9.1
 gocept.selenium = 0.13.2
+gocept.testing = 1.5.2
 grokcore.component = 2.4
 gtkeggdeps = 0.0.7
 icemac.ab.locales = 0.10
