@@ -1,0 +1,25 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:z3c="http://namespaces.zope.org/z3c"
+    xmlns:gocept="http://namespaces.gocept.com/zcml">
+
+  <gocept:pagelet
+      for="icemac.addressbook.interfaces.IAddressBook"
+      layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+      name="person-names.html"
+      class=".Names"
+      template="list.pt"
+      permission="icemac.addressbook.ViewAddressBook" />
+
+  <z3c:siteMenuItem
+     manager="..manager.ISearchResultHandlers"
+     layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+     name="person-names"
+     title="Names (Comma separated list of person names.)"
+     viewName="@@person-names.html"
+     class="..manager.SearchResultHandler"
+     permission="icemac.addressbook.ViewAddressBook"
+     weight="40"
+     />
+
+</configure>
